<resources>
    <string name="app_name">Life Issues</string>
    <string name="bible_names_activity">Bible Names Dictionay</string>
    <string name="banner_ad_unit_id">ca-app-pub-3075330085087679/2977421942</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3075330085087679/5226948080</string>
    <string name="AdMob_App_ID">ca-app-pub-3075330085087679~5350882962</string>
    <string name="TEST_banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="TEST_interstitial_ad_unit">ca-app-pub-3940256099942544/1033173712</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_bible_version">Select Version</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_notes">Notes</string>
    <string name="action_bible_names">Bible Names Meanings(Beta)</string>
    <string name="about">About Life Issues</string>
    <string name="life_issue">Life Issue:</string>
    <string name="random">Random Verse</string>
    <string name="select">Pick an article</string>
    <string name="note_title">Title</string>
    <string name="empty_notes_list">No notes created yet</string>
    <string name="empty_fav_notes_list">Your favourite notes will be listed here</string>
    <string name="empty_fav_issues_list">Your favourite issues will be listed here</string>
    <string name="empty_fav_verses_list">Your favourite Bible verses will be listed here</string>
    <string name="note_content">Content</string>
    <string name="kjvVersion">\u0020(KJV)</string>
    <string name="ampVersion">\u0020(AMP)</string>
    <string name="msgVersion">\u0020(MSG)</string>
    <string name="content_desc_issueimage">Life Issue Image</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="btn_link_to_login">Already a member? Log in now</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_gender">Gender</string>
    <string name="register_on_lifeissues">Register on Life Issues</string>
    <string name="about_app">
        There is a solution to every situation you may go through in life.
    </string>
    <string name="about_life">
        The Life Issues app presents different situations(issues) we may go through in life
        and provides Bible verses related to those situations so that you can easily find the
        timely answers, inspiration, encouragement and motivation you need. Know what God says
        about you current situation and go through it the way He would want you to.
    </string>
    <string name="search_label">Issue Name</string>
    <string name="search_name_label">Bible Name</string>
    <string name="search_hint">Search Life issues</string>
    <string name="search_names_hint">Search Bible names</string>
    <string name="settings_description">Search Life Issues topics</string>
    <string name="settings_names_description">Search Bible names meanings</string>
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>
    <string-array name="versions">
        <item>KJV</item>
        <item>MSG</item>
        <item>AMP</item>
    </string-array>
    <string-array name="versionsMenu">
        <item>KJV</item>
        <item>MSG</item>
        <item>AMP</item>
        <item>Compare</item>
    </string-array>
    <string-array name="versionsValues">
        <item>kjv</item>
        <item>msg</item>
        <item>amp</item>
    </string-array>
    <string name="pref_title_general">General</string>
    <string name="pref_title_app_theme">App Theme</string>
    <string name="pref_app_theme">pref_app_theme</string>
    <string name="title_app_theme">Set app theme</string>
    <string name="default_app_theme">System default</string>
    <string name="pref_header_safety">Safety</string>
    <string name="key_privacy_policy">key_privacy_policy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="key_about_life_issues">key_about_life_issues</string>
    <string name="title_about_life_issues">About Life Issues</string>
    <string name="key_logout">key_logout</string>
    <string name="title_logout">Logout</string>
    <string name="key_view_profile">key_view_profile</string>
    <string name="title_view_profile">View Profile</string>
    <string name="key_share_lifeissues">key_share_lifeissues</string>
    <string name="title_share_lifeissues">Share Life Issues</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
    <string-array name="themesValues">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="mood_entry_reminder">Set daily verse update time</string>
    <string name="default_mood_entry_time">6:00</string>
    <string name="default_daily_verse_version">KJV</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="title_default_daily_verse_version">Default Bible verse version</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="summary_daily_verse_version">Specify default Bible verse version</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">Support</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of
        Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.emtechint.com/life_issues.html/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.emtechint.com/life_issues.html/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">Daily Verse notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_daily_verse_version">key_daily_verse_version</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_daily_verse_time">key_daily_verse_time</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="menu_bible_names_intro">About</string>
    <string name="bible_names_intro_title">HITCHCOCK\'S BIBLE NAMES DICTIONARY</string>
    <string name="bible_names_intro">This dictionary is from "Hitchcock\'s New and Complete Analysis of
        the Holy Bible," published in the late 1800s.

        \n \nIt contains more than 2,500 Bible and Bible-related proper names and their meanings.
        Some Hebrew words of uncertain meaning have been left out.
    </string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>
    <string-array name="pref_upload_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_home">Home</string>
    <string name="account">Account</string>
    <string name="edit_details">Edit Details</string>
    <string name="menu_delete">Delete</string>
    <string name="action_stats">Statistics</string>
    <string name="menu_report_job">Report</string>
    <string name="pref_title_account">Account</string>
    <string name="title_dev_support">Ongoing Development</string>
    <string name="summary_dev_support">"Be part of the story. Support the continuous development of the Life Issues App. "</string>
    <string name="key_dev_support">key_dev_support</string>
    <string name="give_with_card">Card Payment</string>
    <string name="pay_mode_title">Payment Method</string>
    <string name="give_with_mm">Mobile Money (UGX)</string>
    <string name="hint_give_amount">Enter Amount</string>
    <string name="give">Give</string>
    <string name="dev_sup_title">Be Part Of the Story</string>
    <string name="dev_sup_summary">Contribute Towards The Continuous Development Of The Life Issues App.</string>
</resources>