<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity">

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="96"
        android:title="@string/action_favourites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_random_verse"
        android:orderInCategory="97"
        android:title="@string/random"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="98"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="99"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
