<?xml version="1.0" encoding="utf-8"?>
<!-- The attributes below configure the Android search box appearance
     and the search suggestions settings.
     See the Developer Guide for more information
     http://developer.android.com/guide/topics/search/
 -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
        android:label="@string/search_name_label"
        android:hint="@string/search_names_hint"
        android:searchSettingsDescription="@string/settings_names_description"
        android:searchSuggestAuthority="com.lifeissues.lifeissues.data.database.NamesProvider"
        android:searchSuggestIntentAction="android.intent.action.VIEW"
        android:searchSuggestIntentData="content://com.lifeissues.lifeissues.data.database.NamesProvider/names"
        android:searchSuggestSelection=" ?"
        android:includeInGlobalSearch="true"
        >
 </searchable>

