<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@android:drawable/star_big_on"
        android:iconTint="@color/black"
        android:title="@string/action_favourites" />

<!--    <item-->
<!--        android:id="@+id/navigation_testimonies"-->
<!--        android:icon="@drawable/ic_action_testimony"-->
<!--        android:title="@string/title_testimony" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_prayer"-->
<!--        android:icon="@drawable/pray"-->
<!--        android:title="@string/title_prayer" />-->

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account" />

</menu>
