<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/bgColor"
    android:layout_gravity="center_horizontal"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/margin_padding_normal"
    android:paddingRight="@dimen/margin_padding_normal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dev_sup_title_tv"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_header"
            android:gravity="center"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/dev_sup_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dev_sup_subtitle_tv"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/dev_sup_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

<!--        <ImageView-->
<!--            android:id="@+id/dev_sup_iv"-->
<!--            android:layout_width="match_parent"-->
<!--            android:background="@drawable/side_nav_bar"-->
<!--            android:layout_height="250dp"-->
<!--            app:layout_collapseMode="parallax"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_dev_supt_name"
            android:textColorHint="?attr/hintTextColor"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_dev_sup_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_first_name"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textColor="?attr/textColor"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_dev_sup_last_name"
            android:textColorHint="?attr/hintTextColor"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_dev_sup_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_last_name"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="?attr/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_dev_sup_email"
            android:textColorHint="?attr/hintTextColor"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_dev_sup_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textColor="?attr/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/payment_mode"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:text="@string/pay_mode_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/pay_mode_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/card_payment_radio_button"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingLeft="16dp"
                android:paddingTop="20dp"
                android:paddingRight="16dp"
                android:paddingBottom="20dp"
                android:text="@string/give_with_card"
                android:textColor="@drawable/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/mm_radio_button"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingLeft="14dp"
                android:paddingTop="20dp"
                android:paddingRight="14dp"
                android:paddingBottom="20dp"
                android:text="@string/give_with_mm"
                android:textColor="@drawable/radio_flat_text_selector" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            android:paddingBottom="@dimen/margin_padding_normal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/margin_padding_normal"
            android:paddingRight="@dimen/margin_padding_normal"
            app:hintEnabled="true"
            android:hint="@string/hint_give_amount"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="?attr/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSendGift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="?attr/textColor"
            android:text="@string/give"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>